crates/legacy_ide/src/snapshots/legacy_ide__symbols__tests__symbol_rhs_braced_list.snap
---
source: crates/ark/src/lsp/symbols.rs
expression: "test_symbol(\"\nfoo <- {\n    bar <- function() {}\n}\n\")"
---
[
    DocumentSymbol {
        name: "foo",
        detail: None,
        kind: Variable,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 3,
                character: 1,
            },
        },
        selection_range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 3,
                character: 1,
            },
        },
        children: Some(
            [
                DocumentSymbol {
                    name: "bar",
                    detail: Some(
                        "function()",
                    ),
                    kind: Function,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 2,
                            character: 4,
                        },
                        end: Position {
                            line: 2,
                            character: 24,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 2,
                            character: 4,
                        },
                        end: Position {
                            line: 2,
                            character: 24,
                        },
                    },
                    children: Some(
                        [],
                    ),
                },
            ],
        ),
    },
]
